# NXP-HoverGames-2

./: .gitignore  .gitmodules  404.md  CNAME  LICENSE  LICENSE.txt  NOTES.md  README.md  index.md  setup.sh  take_picture.py
CPP/: main.cxx
CPP/HoverGames2/: CMakeLists.txt
CPP/HoverGames2/src/messaging/: BaseStationCommunicator.cpp  Communicator.h  DroneCommunicator.cpp  DroneCommunicator.h
CPP/HoverGames2/src/messaging/agent/: droneMoveCommand.h
CPP/HoverGames2/src/messaging/common/: ack.h  header.h  hello.h  location.h  welcome.h
CPP/HoverGames2/src/messaging/controller/: agentLocation.h  agentMoveCommand.h  subjectLocation.h
CPP/HoverGames2/src/messaging/messages/agent/: agentLocation.h
CPP/HoverGames2/src/messaging/messages/common/: location.h  welcome.h
CPP/HoverGames2/src/messaging/messages/controller/: subjectLocation.h
CPP/HoverGames2/src/system/agent/: Agent.cpp
CPP/HoverGames2/src/system/base_station/: BaseStation.cpp  BaseStation.h
CPP/HoverGamesApp/: HoverGamesApp.sln
CPP/HoverGamesApp/HoverGamesApp/: HoverGamesApp.vcxproj  HoverGamesApp.vcxproj.filters
CPP/HoverGamesApp/HoverGamesApp/src/: HoverGamesApp.cpp
CPP/HoverGamesApp/HoverGamesApp/src/modules/tester/: Tester.hpp
CPP/HoverGamesApp/HoverGamesApp/src/utils/pipeline/: module.hpp  module_pipeline.hpp  pair.hpp
CPP/air_process/: CMakeLists.txt
CPP/src/utils/: module.hpp  module_pipeline.hpp
code/: CMakeLists.txt  main.cpp
code/src/messaging/: BaseStationCommunicator.cpp  BaseStationCommunicator.h  Communicator.cpp  Communicator.h  DroneCommunicator.cpp  DroneCommunicator.h
code/src/messaging/messages/agent/: agentLocation.h
code/src/messaging/messages/common/: ack.h  header.h  hello.h  welcome.h
code/src/messaging/messages/controller/: agentMoveCommand.h  subjectLocation.h
code/src/system/: Runnable.h
code/src/system/agent/: Agent.cpp  Agent.h
code/src/system/base_station/: BaseStation.cpp  BaseStation.h
code/src/system/controller/python/: controller_interface.py  manual_controller.py
code/src/system/controller/python/messaging/: parser.py
code/src/system/controller/python/messaging/messages/: __init__.py  ack.py  agent_location.py  agent_move_command.py  hello.py  welcome.py
code/src/utils/: time.h  util_time.h
code/src/utils/thread/runnable/: Runnable.cpp  Runnable.h  ThreadLoop.h
code/src/utils/thread/threadPool/includes/: static_pool.hpp
code/src/utils/time/: ticker.h  util_time.h
docker/: CodeStyleScheme.xml  Dockerfile  run_dev.sh
scripts/: video_record.py
